--- a/uge.conf
+++ b/uge.conf
@@ -15,7 +15,7 @@ USE_SYSTEMD="true"
 
 # SGE_ROOT Path, this is basic information
 #(mandatory for qmaster and execd installation)
-SGE_ROOT="/nfs/sge"
+SGE_ROOT="/tools/gridengine/uge"
 
 # SGE_QMASTER_PORT is used by qmaster for communication
 # Please enter the port in this way: 1300
@@ -84,7 +84,7 @@ CELL_NAME="default"
 # If this is left blank, on UNIX/Linux, the owner of the SGE_ROOT dir
 # will be used as admin user. On native Windows (win-x86), the user that
 # starts the installer will be used as admin user.
-ADMIN_USER="opc"
+ADMIN_USER="sgeadmin"
 
 # The ADMIN_PASSWORD is needed on win-x86 to install the UGE Starter Service
 # properly. The UGE Starter Service is used to start the execution daemon
