--- a/oke-npd/node-problem-detector-config.yaml
+++ b/oke-npd/node-problem-detector-config.yaml
@@ -1627,5 +1627,5 @@ data:
     fi
 kind: ConfigMap
 metadata:
-  name: oke-gpu-rdma-npd-config
+  name: node-problem-detector-config
   namespace: kube-system
