--- a/23.9.1-to-24.9.20-values.yaml
+++ b/23.9.1-to-24.9.20-values.yaml
@@ -40,6 +40,9 @@ daemonsets:
   - key: nvidia.com/gpu
     operator: Exists
     effect: NoSchedule
+  - key: h100
+    operator: Exists
+    effect: NoSchedule
   # configuration for controlling update strategy("OnDelete" or "RollingUpdate") of GPU Operands
   # note that driver Daemonset is always set with OnDelete to avoid unintended disruptions
   updateStrategy: "RollingUpdate"
