--- a/npd-cordon/daemonset.yaml
+++ b/npd-cordon/daemonset.yaml
@@ -48,19 +48,19 @@ spec:
           args:
             - "-ec"
             - |
-              NODES_WITH_ISSUES=$(kubectl get nodes -o json | jq -r '.items[]
-              | select (.metadata.labels."nvidia.com/gpu" == "true" or .metadata.labels."amd.com/gpu" == "true")
-              | { name: .metadata.name, ocid: .spec.providerID, serial: .metadata.labels["oci.oraclecloud.com/host.serial_number"], error: .status.conditions[]
-              | select(.reason | test("^(Gpu).*HasIssues$")) | .message }
-              | "\(.name)"')
+               NODES_WITH_ISSUES=$(/b/kubectl get nodes -o json | /b/jq -r '.items[]
+               | select (.metadata.labels."nvidia.com/gpu" == "true" or .metadata.labels."amd.com/gpu" == "true")
+               | { name: .metadata.name, ocid: .spec.providerID, serial: .metadata.labels["oci.oraclecloud.com/host.serial_number"], error: .status.conditions[]
+               | select(.reason | test("^(Gpu).*HasIssues$")) | .message }
+               | "\(.name)"')
+               
+               if echo $NODES_WITH_ISSUES | grep -wq $NODE_NAME; then
+                   /b/kubectl cordon $NODE_NAME
+               else
+                   echo "Node has no issues"
+               fi              
               
-              if echo $NODES_WITH_ISSUES | grep -wq $NODE; then
-                  /b/kubectl cordon $NODE
-              else
-                  echo "Node has no issues"
-              fi              
-             
-              while :; do sleep 60; done
+               while :; do sleep 60; done
   updateStrategy:
     type: RollingUpdate
     rollingUpdate:
