--- a/amd-gpu-operator/BM.GPU.MI300X.8-device-config.yaml
+++ b/amd-gpu-operator/BM.GPU.MI300X.8-device-config.yaml
@@ -1,7 +1,7 @@
 apiVersion: amd.com/v1alpha1
 kind: DeviceConfig
 metadata:
-  name: luma-test-deviceconfig
+  name: BM.GPU.MI300X.8
   # use the namespace where AMD GPU Operator is running
   namespace: amd-gpu-operator
 spec:
