--- a/network-operator-vf/sriov-network-operator/sriov-network-pool-config-percent.yaml
+++ b/network-operator-vf/sriov-network-operator/sriov-network-pool-config-percent.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   maxUnavailable: "100%"
   nodeSelector:
-    - matchExpressions:
+    matchExpressions:
       - key: node.kubernetes.io/instance-type
         operator: In
         values:
