--- a/oke-gb200/dra-values.yaml
+++ b/oke-gb200/dra-values.yaml
@@ -37,13 +37,13 @@ allowDefaultNamespace: false
 
 imagePullSecrets: []
 image:
-  repository: nvcr.io/nvidia/k8s-dra-driver-gpu
+  repository: ghcr.io/nvidia/k8s-dra-driver-gpu
   pullPolicy: IfNotPresent
   # Note: an empty string is translated to the `appVersion` string from
   # the Helm chart YAML (effectively implementing the default value to be
   # the current version). Also note that a "v" is prefixed to the
   # `appVersion` value.
-  tag: ""
+  tag: "d4ede35b-ubi9"
 
 serviceAccount:
   # Specifies whether a service account should be created
@@ -92,7 +92,7 @@ kubeletPlugin:
   - key: "nvidia.com/gpu"
     value: "present"
     operator: "Equal"
-    effect: "NoSchedule"  
+    effect: "NoSchedule"
   containers:
     init:
       securityContext: {}
