--- a/oke-gb200/nccl-test-job.yaml
+++ b/oke-gb200/nccl-test-job.yaml
@@ -8,7 +8,7 @@ spec:
   channel:
     resourceClaimTemplate:
       name: nccl-test-compute-domain-channel
- 
+
 ---
 apiVersion: kubeflow.org/v2beta1
 kind: MPIJob
@@ -30,7 +30,7 @@ spec:
         spec:
           containers:
           - name: mpi-launcher
-            image: ghcr.io/coreweave/nccl-tests:12.8.1-devel-ubuntu22.04-nccl2.26.2-1-0708d2e
+            image: iad.ocir.io/hpc_limited_availability/nccl-tests:pytorch-25.03-nccl-2.26.6-1
             command: ["bash", "-c"]
             args:
               - |
@@ -41,11 +41,11 @@ spec:
                 -x NCCL_DEBUG=INFO \
                 -x NCCL_MNNVL_ENABLE=1 \
                 -x NCCL_CUMEM_ENABLE=1 \
-                -x NCCL_IB_HCA="^mlx5" \
+                -x NCCL_IB_HCA==mlx5_0,mlx5_1,mlx5_3,mlx5_4 \
                 -x NCCL_NVLS_ENABLE=1 \
                 -x NCCL_SOCKET_IFNAME=eth0 \
                 -np 8 \
-                /opt/nccl-tests/build/all_reduce_perf -b 8 -e 32G -f 2 -g 1
+                /workspace/nccl-tests/build/all_reduce_perf -b 8 -e 32G -f 2 -g 1
             env:
               - name: OMPI_ALLOW_RUN_AS_ROOT
                 value: "1"
@@ -68,16 +68,13 @@ spec:
                     values:
                     - mpi-worker
                 topologyKey: nvidia.com/gpu.clique
-            tolerations:
-            - key: "nvidia.com/gpu"
-            value: "present"
-            operator: "Equal"
-            effect: "NoSchedule"      
           containers:
           - name: mpi-worker
-            image: ghcr.io/coreweave/nccl-tests:12.8.1-devel-ubuntu22.04-nccl2.26.2-1-0708d2e
-            command: ["/usr/sbin/sshd"]
-            args: ["-De"]
+            image: iad.ocir.io/hpc_limited_availability/nccl-tests:pytorch-25.03-nccl-2.26.6-1
+            command:
+              - /bin/bash
+              - -c
+              - mkdir -p /var/run/sshd; /usr/sbin/sshd -D;
             env:
               - name: OMPI_ALLOW_RUN_AS_ROOT
                 value: "1"
