--- a/network-operator-vf/sriov-network-operator/nccl-tests-nv-ipam-ippool.yaml
+++ b/network-operator-vf/sriov-network-operator/nccl-tests-nv-ipam-ippool.yaml
@@ -84,6 +84,7 @@ spec:
         metadata:
           annotations:
             k8s.v1.cni.cncf.io/networks: example-sriov-network-nv-ipam-ippool,example-sriov-network-nv-ipam-ippool,example-sriov-network-nv-ipam-ippool,example-sriov-network-nv-ipam-ippool,example-sriov-network-nv-ipam-ippool,example-sriov-network-nv-ipam-ippool,example-sriov-network-nv-ipam-ippool,example-sriov-network-nv-ipam-ippool,example-sriov-network-nv-ipam-ippool,example-sriov-network-nv-ipam-ippool,example-sriov-network-nv-ipam-ippool,example-sriov-network-nv-ipam-ippool,example-sriov-network-nv-ipam-ippool,example-sriov-network-nv-ipam-ippool,example-sriov-network-nv-ipam-ippool,example-sriov-network-nv-ipam-ippool
+        spec:
           containers:
             - name: mpiworker
               command:
