--- a/network-operator-vf/host-device/nic-cluster-policy-nvipam.yaml
+++ b/network-operator-vf/host-device/nic-cluster-policy-nvipam.yaml
@@ -16,9 +16,9 @@ spec:
              "resourceName": "hostdev",
              "selectors": {
                "vendors": ["15b3"],
-               "devices": ["101a"],
+               "devices": [],
                "drivers": [],
-               "pfNames": [],
+               "pfNames": ["rdma*"],
                "pciAddresses": [],
                "rootDevices": [],
                "linkTypes": [],
