--- a/network-operator-vf/host-device/nic-cluster-policy-nvipam.yaml
+++ b/network-operator-vf/host-device/nic-cluster-policy-nvipam.yaml
@@ -16,7 +16,7 @@ spec:
              "resourceName": "hostdev",
              "selectors": {
                "vendors": ["15b3"],
-               "devices": ["1019"],
+               "devices": ["101a"],
                "drivers": [],
                "pfNames": [],
                "pciAddresses": [],
