--- a/network-operator-vf/host-device/update-nad-no-rdma.yaml
+++ b/network-operator-vf/host-device/update-nad-no-rdma.yaml
@@ -29,7 +29,7 @@ spec:
           },
           "mtu": 4220
         },
-        { "type": "sbr" }
+        { "type": "sbr" },
         { "type": "rdma" }
       ]
     }
