--- a/network-operator-vf/sriov-network-operator/network-attachment-definition.yaml
+++ b/network-operator-vf/sriov-network-operator/network-attachment-definition.yaml
@@ -29,7 +29,7 @@ spec:
           },
           "mtu": 4220
         },
-        { "type": "sbr" },
-        { "type": "rdma" }
+        { "type": "rdma" },
+        { "type": "sbr" }
       ]
     }
